--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -4,7 +4,7 @@ Human brains, behaviour, and cognition exhibit important differences between and
 
 Whole brain functional networks are graphs whose *nodes* are either spatially separate brain regions (for fMRI or source-reconstructed EEG/MEG) or sensors (for EEG/MEG) distributed across the entire cerebral cortex,[^1] and whose *edges* quantify the observed statistical dependency between two oscillatory neural signals originating from different nodes in the network. In common neuroscientific parlance, edges in the network represent *functional connectivity* or *coupling* between nodes, subgraphs in the network represent distinct *functional networks*, and the entire graph of the network represents a *functional connectome* [@barchetal_FunctionHumanConnectome_2013; @vanessenetal_HumanConnectomeProject_2012; cf. @spornsetal_HumanConnectomeStructural_2005]. Functional connectomes can be constructed by estimating phase coupling, amplitude coupling, or temporal correlations between all pairs of nodes after band-pass filtering the signals to frequency bands of interest [@bastosschoffelen_TutorialReviewFunctional_2016]. For fMRI studies, functional connectivity is typically estimated using temporal correlations between signals in a single infraslow frequency band (e.g., 0.009-0.08 Hz), resulting in a single functional connectome; whereas for EEG/MEG studies, functional connectivity is typically estimated using phase coupling and/or amplitude coupling in multiple frequency bands over a wide frequency range (e.g., 1-50 Hz) due to neurophysiological signals containing a mixture of distinct neuronal oscillation frequencies, resulting in multiple concurrent functional connectomes [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
 
-Over the last two decades, convergent findings from group-averaged fMRI studies have identified that the human functional connectome is governed by an intrinsic functional architecture [@foxetal_HumanBrainIntrinsically_2005; @petersensporns_BrainNetworksCognitive_2015; @raichle_RestlessBrainHow_2015] wherein functional networks exhibit spontaneous coupling between their nodes that can be captured in both the absence and presence of cognitive demands [@poweretal_FunctionalNetworkOrganization_2011; @uddinetal_UniversalTaxonomyMacroscale_2019; @yeoetal_OrganizationHumanCerebral_2011]. Some of these functional networks are most easily detected in the absence of cognitive demands (i.e., in a *resting state*); others are most easily detected in the presence of cognitive demands (i.e., in a *task state*); and some, such as the default mode network [@biswaletal_FunctionalConnectivityMotor_1995; @greiciusetal_FunctionalConnectivityResting_2003; @raichleetal_DefaultModeBrain_2001; @raichlesnyder_DefaultModeBrain_2007], can be easily detected in both resting and task states [@greiciusmenon_DefaultModeActivityPassive_2004; @honeyetal_PredictingHumanRestingstate_2009]. The spatial organization of these *intrinsic connectivity networks* [@seeleyetal_DissociableIntrinsicConnectivity_2007] has been found to be very stable, exhibiting only minor changes under varying cognitive demands [@coleetal_IntrinsicTaskEvokedNetwork_2014; @grattonetal_FunctionalBrainNetworks_2018; @krienenetal_ReconfigurableTaskdependentFunctional_2014], and largely persisting in unconscious states such as sleep [@picchionietal_SleepFunctionalConnectome_2013]. More recent studies using group-averaged and source-reconstructed EEG/MEG or simultaneous fMRI-EEG have also corroborated these findings, implicating that a similar organization of the human functional connectome is present across the full range of oscillatory frequencies that are typically measured with EEG/MEG [@engeletal_IntrinsicCouplingModes_2013; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
+Over the last two decades, convergent findings from group-averaged fMRI studies have identified that the human functional connectome is governed by an intrinsic functional architecture [@foxetal_HumanBrainIntrinsically_2005; @petersensporns_BrainNetworksCognitive_2015; @raichle_RestlessBrainHow_2015] wherein functional networks exhibit spontaneous coupling between their nodes that can be captured in both the absence and presence of cognitive demands [@poweretal_FunctionalNetworkOrganization_2011; @uddinetal_UniversalTaxonomyMacroscale_2019; @yeoetal_OrganizationHumanCerebral_2011]. Some of these functional networks are most easily detected in the absence of cognitive demands (i.e., in a *resting state*); others are most easily detected in the presence of cognitive demands (i.e., in a *task state*); and some, such as the default mode network [@biswaletal_FunctionalConnectivityMotor_1995; @greiciusetal_FunctionalConnectivityResting_2003; @raichleetal_DefaultModeBrain_2001; @raichlesnyder_DefaultModeBrain_2007], can be easily detected in both resting and task states [@greiciusmenon_DefaultModeActivityPassive_2004; @honeyetal_PredictingHumanRestingstate_2009]. The spatial organization of these *intrinsic connectivity networks* [@seeleyetal_DissociableIntrinsicConnectivity_2007] has been found to be very stable, exhibiting only minor changes under varying cognitive demands [@coleetal_IntrinsicTaskEvokedNetwork_2014; @grattonetal_FunctionalBrainNetworks_2018; @krienenetal_ReconfigurableTaskdependentFunctional_2014], and largely persisting in unconscious states such as sleep [@picchionietal_SleepFunctionalConnectome_2013]. More recent studies using group-averaged and source-reconstructed EEG/MEG or simultaneous fMRI-EEG have also corroborated these findings, implicating that a similar organization of the human functional connectome is present across the full range of oscillatory frequencies that are typically measured with EEG/MEG [@engeletal_IntrinsicCouplingModes_2013; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @wirsichetal_RelationshipEEGFMRI_2021].
 
 However, following the discovery of a stable intrinsic organization of the group-averaged human functional connectome, a growing number of studies using fMRI [@bijsterboschetal_RelationshipSpatialConfiguration_2018; @finnetal_FunctionalConnectomeFingerprinting_2015; @gordonetal_IndividualVariabilitySystemLevel_2017; @gordonetal_PrecisionFunctionalMapping_2017; @gordonetal_IndividualspecificFeaturesBrain_2017; @grattonetal_FunctionalBrainNetworks_2018; @kongetal_SpatialTopographyIndividualSpecific_2019; @krausetal_NetworkVariantsAre_2021; @miranda-dominguezetal_ConnectotypingModelBased_2014; @muelleretal_IndividualVariabilityFunctional_2013; @seitzmanetal_TraitlikeVariantsHuman_2019; @smithetal_BrainHubsDefined_2023]---and to a lesser extent---EEG [@nentwichetal_FunctionalConnectivityEEG_2020] and MEG [@colcloughetal_HowReliableAre_2016] have identified reliable and substantial variability in functional connectome organization across *every* individual studied so far that is either underestimated or missed entirely by group-averaged models of the human functional connectome [@fedorenko_EarlyOriginsGrowing_2021; @fedorenkoblank_BrocaAreaNot_2020; @gordonetal_PrecisionFunctionalMapping_2017; @gordonnelson_ThreeTypesIndividual_2021; @muelleretal_IndividualVariabilityFunctional_2013; @speelmanmcgann_HowMeanMean_2013; @zillesamunts_IndividualVariabilityNot_2013]. This has been demonstrated using a variety of approaches. For example, using community detection algorithms, @laumannetal_FunctionalSystemAreal_2015 found evidence of an idiosyncratic spatial organization between individual and group-averaged functional connectomes such that certain functional networks present in the individual were not present in the group (and vice versa); comparing spatial correlations between individual and group-averaged functional connectomes, @seitzmanetal_TraitlikeVariantsHuman_2019 found similar evidence of an idiosyncratic spatial organization across individuals, wherein certain spatially contiguous cortical regions were weakly correlated between individual and group-averaged functional connectomes (the location, size, and functional network assignments of these regions differed across individuals); and comparing functional connectome similarity between and within individuals, @grattonetal_FunctionalBrainNetworks_2018 found that functional connectomes were consistently more similar within than between individuals regardless of varying cognitive demands or time. Borrowing from @seitzmanetal_TraitlikeVariantsHuman_2019, here we use the term *network variants* as a catch-all shorthand to refer to individual differences in functional connectome organization relative to either a group-averaged functional connectome or other individuals' functional connectomes. These individual differences may present themselves in several forms, including interindividual variability in connectivity strength, the size and position of network nodes, or network topography [@gordonnelson_ThreeTypesIndividual_2021; @uddinetal_ControversiesProgressStandardization_2023].
 
@@ -98,6 +98,8 @@ A standard acquisition method for functional connectivity analysis in the contex
 
 <!-- 
 
+Although some aspects of static fMRI FC(particularlyICNs)areextremely robust to these choices, the choices may be of substantial consequence for cross-modal comparisons (e.g., cf. sensitivity of α-band neurophysiological FC to eyes open/closed condition; Gómez-Ramírez et al., 2017). https://www.nature.com/articles/s41598-017-15659-0
+
 fMRI resting state stuff:
 
 >“In this context, 60 most studies have focused on the acquisition of resting-state functional MRI to map the intrinsic 61 connectivity of neural networks. This choice is often prompted by three considerations. First, 62 intrinsic connectivity networks appear to be more heritable than task-elicited activity (Elliott et al., 63 2017; Ge et al., 2017; Winkler et al., 2010). Second, resting-state data are relatively easy to collect 64 from informative populations of children, the elderly, and mentally ill patients (Fox, 2010; 65 Greicius, 2008; Shehzad et al., 2009). Third, intrinsic connectivity plays a primary role in shaping 66 task-based brain activity and associated behaviors (Cole et al., 2016, 2014; Krienen et al., 2014; 67 Tavor et al., 2016).” ([Elliott et al., 2019, p. 3](zotero://select/library/items/YMWLS5SX)) ([pdf](zotero://open-pdf/library/items/YYFVCMKV?page=3&annotation=M8QECJT6))
@@ -109,8 +111,6 @@ fMRI functional connectivity challenges: @bijsterboschetal_ChallengesFutureDirec
 -->
 
 To date, two distinct modes of same-frequency intrinsic coupling have been identified throughout the EEG literature: *phase coupling* and *amplitude coupling* [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Phase coupling involves the timing of rhythmic neuronal activity and is defined as the coupling between the phases of two signals, estimated by the consistency of their phase angle differences (i.e., phase lags) over time [@mostamesadaghiani_PhaseAmplitudecouplingAre_2020; @stametal_PhaseLagIndex_2007]. Many distinct metrics have been developed to quantify phase coupling between two signals, each of which differ in their assumptions, motivations, availability in statistical software, and popular usage; however, what they have in common is their basic aim to capture and quantify different properties of the consistency of the distribution of phase angle differences over time [@bastosschoffelen_TutorialReviewFunctional_2016].[^2] To clarify this concept, we simulated two scenarios depicting how the consistency of phase angle differences behaves for phase-coupled signals (Figure \@ref(fig:phase-plot)A) and independent signals (Figure \@ref(fig:phase-plot)B). For Figure \@ref(fig:phase-plot)A, we generated two 5 Hz sinusoidal waves with an initial phase of 145 degrees (Signal 1) and 25 degrees (Signal 2) and uncorrelated Gaussian white noise added to each signal, then calculated the instantaneous phase angle difference between the signals at each time point. For Figure \@ref(fig:phase-plot)B, the instantaneous phase angle difference was instead calculated between Signal 1 and a third signal of Gaussian white noise (Signal 3). A narrow peak in the instantaneous phase angle difference distribution can be observed with the phase-coupled signals (Figure \@ref(fig:phase-plot)A), in contrast to the relatively even distribution of instantaneous phase angle differences with the independent signals (Figure \@ref(fig:phase-plot)B).
-
-
 
 ```{r phase-plot}
 #| fig.cap: Illustration of instantaneous phase angle differences between two phase-coupled signals (A) and independent signals (B). The top plots in each panel depict the time course of two 5 Hz signals with a 145 degree phase (Signal 1) and 25 degree phase (Signal 2), and Gaussian white noise (Signal 3). The polar histogram plots depict the distribution of instantaneous phase angle differences between phase-coupled Signals 1 and 2 (A) and independent Signals 1 and 3 (B); a narrow peak in the instantaneous phase angle difference distribution can be observed with the phase-coupled signals, in contrast to the relatively even distribution of instantaneous phase angle differences with the independent signals.
