make sentence clearer

--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -39,7 +39,7 @@ Network variants are likely sensitive to the spatial resolution of the neuroimag
 
 Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are two assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is related to its low sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], and not to the actual timeframe at which neural processes occur; and (2) EEG samples a substantially larger number of time points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at slower timescales such as the delta band.
 
-Second, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@fraschinietal_RobustnessFunctionalConnectivity_2019; @hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007]. Given that we generally found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. The most extreme examples of this in our study were with amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands, where we found that surprisingly high similarity within and between individuals was associated with functional connectomes with surprisingly low coupling across sensors for all connectomes. Because of the homogeneously low patterns of coupling, we would argue that these cases of high similarity are not particularly interesting, and should likely be treated as a methodological artifact.
+Second, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007], and might also remove or attenuate individual-specific features of the functional connectome [@fraschinietal_RobustnessFunctionalConnectivity_2019]. Given that we generally found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. The most extreme examples of this in our study were with amplitude coupling functional connectomes in the delta, theta, beta, and gamma bands, where we found that surprisingly high similarity within and between individuals was associated with functional connectomes with surprisingly low coupling across sensors for all connectomes. Because of the homogeneously low patterns of coupling, we would argue that these cases of high similarity are not particularly interesting, and should likely be treated as a methodological artifact.
 
 One potential solution to avoid homogeneously low patterns of coupling would be to use phase and amplitude coupling methods that include zero-lag coupling---supplemented with tests against volume conduction [@cohen_AnalyzingNeuralTime_2014]. However, this approach is impractical for EEG connectomics research since it requires inspecting hundreds of thousands of individual connections to rule out possible contamination by volume conduction. Another potential solution would be to use non-zero lag coupling methods that might underestimate true connectivity by a lesser amount, such as the weighted phase lag index [@vincketal_ImprovedIndexPhasesynchronization_2011] for phase coupling. We are not aware of an equivalent weighted non-zero lag method for amplitude coupling. For future work, this may mean that in cases where it is impractical to estimate zero-lag amplitude coupling with tests against volume conduction, it may be better not to use amplitude coupling methods at all. Regardless, the spatial mixing caused by volume conduction poses a difficult problem, and future work may benefit from testing the robustness of different functional connectivity methods for studying network variants with EEG [for a related example using magnetoencephalography, see @colcloughetal_HowReliableAre_2016].
 
