--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -256,7 +256,7 @@ To quantify these effects, we used pairwise contrasts to estimate how much and i
 knitr::include_graphics(here::here("figures/contrasts-plot.png"))
 ```
 
-Here we focus on the estimation of the direction, strength, and uncertainty of these effects in our sample---explicitly refraining from a null-hypothesis significance testing approach in favour of an estimation approach [@berneramrhein_WhyHowWe_2021]. We favour an estimation approach for the following reasons: First, given the existing evidence that functional connectomes are highly stable within individuals with a large amount of unshared organization between people [e.g., @grattonetal_FunctionalBrainNetworks_2018], it is implausible that we will find zero difference in functional connectome similarity within versus between participants; thus, a point null hypothesis of "zero difference" would merely serve as a straw-man hypothesis to be rejected without adding anything meaningful to the question at hand [@berneramrhein_WhyHowWe_2021; @gelman_ProblemsPValuesAre_2016]. Instead, as we illustrated in Figures \@ref(fig:similarity-archetype-plots) and \@ref(fig:contrasts-plot), the motivation behind the present study was the exploration of broad empirical questions about how much and in which ways functional connectome similarity differed within and between individuals across sessions and states, which requires an approach describing and discussing the range of effect sizes that are most compatible with our data (given our background model), rather than the testing of narrow hypotheses that could either be "rejected" or "accepted" [@amrheinetal_ScientistsRiseStatistical_2019; @amrheingreenland_DiscussPracticalImportance_2022; @berneramrhein_WhyHowWe_2021]. Second, as numerous statisticians and scientists have warned for decades, the abuse of ritualistic dichotomous inference in lieu of statistical thinking across scientific disciplines has created a crisis of validity for scientific conclusions, including their replicability [@gigerenzer_StatisticalRitualsReplication_2018; @wassersteinetal_MovingWorld05_2019; @wassersteinlazar_ASAStatementPValues_2016]. Rather than contribute to this crisis, we recognize that the primary scientific contribution of the present study is the estimation of the direction, strength, and uncertainty of individual differences in functional connectome similarity in our sample; whereas meta-analytic studies and other cumulative approaches that combine information from multiple studies---each with their own set of conditions, assumptions, patterns of variation, and sources of systematic error---will typically be required to come to more generalized scientific conclusions about electrophysiological network variants [@berneramrhein_WhyHowWe_2021; @nicholsetal_AccumulatingEvidenceEcology_2019; @nicholsetal_BetterApproachDealing_2021]. 
+Here we focus on the estimation of the direction, strength, and uncertainty of these effects in our sample---explicitly refraining from a null-hypothesis significance testing approach in favour of an estimation approach [@berneramrhein_WhyHowWe_2021]. We favour an estimation approach for the following reasons: First, given the existing evidence that functional connectomes are highly stable within individuals with a large amount of unshared organization between people [e.g., @grattonetal_FunctionalBrainNetworks_2018], it is implausible that we will find zero difference in functional connectome similarity within versus between participants; thus, a point null hypothesis of "zero difference" would merely serve as a straw-man hypothesis to be rejected without adding anything meaningful to the question at hand [@berneramrhein_WhyHowWe_2021; @gelman_ProblemsPValuesAre_2016]. Instead, as we illustrated in Figures \@ref(fig:similarity-archetype-plots) and \@ref(fig:contrasts-plot), the motivation behind the present study was the exploration of broad empirical questions about how much and in which ways functional connectome similarity differed within and between individuals across sessions and states, which requires an approach describing and discussing the range of effect sizes that are most compatible with our data (given our background model), rather than the testing of narrow hypotheses that could either be "rejected" or "accepted" [@amrheinetal_InferentialStatisticsDescriptive_2019; @amrheinetal_ScientistsRiseStatistical_2019; @amrheingreenland_DiscussPracticalImportance_2022; @berneramrhein_WhyHowWe_2021]. Second, as numerous statisticians and scientists have warned for decades, the abuse of ritualistic dichotomous inference in lieu of statistical thinking across scientific disciplines has created a crisis of validity for scientific conclusions, including their replicability [@gigerenzer_StatisticalRitualsReplication_2018; @wassersteinetal_MovingWorld05_2019; @wassersteinlazar_ASAStatementPValues_2016]. Rather than contribute to this crisis, we recognize that the primary scientific contribution of the present study is the estimation of the direction, strength, and uncertainty of individual differences in functional connectome similarity in our sample; whereas meta-analytic studies and other cumulative approaches that combine information from multiple studies---each with their own set of conditions, assumptions, patterns of variation, and sources of systematic error---will typically be required to come to more generalized scientific conclusions about electrophysiological network variants [@amrheinetal_InferentialStatisticsDescriptive_2019; @berneramrhein_WhyHowWe_2021; @nicholsetal_AccumulatingEvidenceEcology_2019; @nicholsetal_BetterApproachDealing_2021]. 
 
 It is likely that the real data will be representative of more than one of the hypothetical outcomes illustrated in Figures \@ref(fig:similarity-archetype-plots) and \@ref(fig:contrasts-plot). Figure \@ref(fig:outcome-plot) illustrates what this might look like should the individual, individual-session, and individual-state effects be equally represented in the underlying global network activity, based on the simple averaging of each effects' contrasts. We emphasize that this illustration represents an unrealistic scenario where each individual's functional connectomes are perfectly similar with themselves and perfectly dissimilar with others; therefore, the magnitude of these effect sizes is greatly exaggerated. In reality, we would expect to find smaller effect sizes whose magnitudes decrease as the dynamics of underlying global network activity becomes more similar across individuals. Moreover, it is rather unlikely that the individual, individual-session, and individual-state effects would be equally weighted; thus, we would also expect to find an additional degree of variation in this hypothetical pattern of results based on the relative contribution of these effects to the stability of functional connectome similarity within individuals across sessions and states [@grattonetal_FunctionalBrainNetworks_2018]. We illustrate the relative influence of these effects in the second, third, and fourth plots of Figure \@ref(fig:outcome-plot). In the second plot we see that as the individual effect makes a greater relative contribution, the magnitude of effect sizes across all contrasts becomes greater; whereas, in the third and fourth plots we see that as either the individual-session or individual-state effects make a greater relative contribution, an additional degree of effect size variation appears with both more and less pronounced differences in functional connectome similarity occurring across sessions and states.
 
